sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:9: error: reassignment to val
      i=i-1
       ^